# CharadesWhiteboard

./: CMakeLists.txt  README.md
host/: CMakeLists.txt
host/headers/: network_device.h
host/resources/: main.qml
host/sources/: main.cpp  network_device.cpp
plugin/: CMakeLists.txt
plugin/headers/: arrow.h  bounding_box.h  cactus.h  dash_line.h  drawing_client.h  drawing_server.h  ellipse.h  input_event.h  line.h  local_drawing_client.h  local_drawing_server.h  network_event.h  network_interface.h  rectangle.h  shape.h  shape_editor.h  shape_position.h  shape_style.h  straight_line.h  text.h  toolbox.h  virtual_drawing_client.h  virtual_drawing_server.h  whiteboard_input_backend.h  whiteboard_logic.h  whiteboard_plugin.h  whiteboard_quick_canvas.h
plugin/resources/: Editorbar.qml  Toolbar.qml  Whiteboard.qml  plugin.qrc  qmldir
plugin/sources/: arrow.cpp  bounding_box.cpp  cactus.cpp  dash_line.cpp  drawing_server.cpp  ellipse.cpp  input_event.cpp  line.cpp  local_drawing_client.cpp  local_drawing_server.cpp  network_event.cpp  pencil.cpp  rectangle.cpp  shape.cpp  shape_editor.cpp  shape_position.cpp  shape_style.cpp  straight_line.cpp  text.cpp  toolbox.cpp  virtual_drawing_client.cpp  virtual_drawing_server.cpp  whiteboard_input_backend.cpp  whiteboard_logic.cpp  whiteboard_plugin.cpp  whiteboard_quick_canvas.cpp
